update combined_titles in map reduce

--- a/spark/wikipedia_map_reduce.ipynb
+++ b/spark/wikipedia_map_reduce.ipynb
@@ -197,21 +197,21 @@
      "text": [
       "Combined titles:\n",
       "Title: E.Desv, Data: [('aa', 1, 4662), ('arc', 1, 5210), ('ast', 1, 4825), ('fiu-vro', 1, 5237), ('fr', 1, 7057), ('ik', 1, 4548)]\n",
+      "Title: Special:Contributions/5.232.61.79, Data: [('aa', 1, 5805)]\n",
+      "Title: Special:ListFiles/Nyttend, Data: [('aa', 1, 5032)]\n",
       "Title: Special:WhatLinksHere/Main_Page, Data: [('aa', 1, 5556), ('commons.m', 2, 15231), ('en', 5, 101406), ('en.s', 1, 8597), ('en.voy', 1, 8550), ('meta.m', 1, 11529), ('outreach.m', 1, 5698), ('simple', 3, 32145)]\n",
       "Title: Time_Inc, Data: [('aa', 1, 4672), ('af', 1, 6182), ('ha', 1, 4842), ('na', 1, 4923)]\n",
+      "Title: Special:Contributions/MBisanz, Data: [('aa.d', 1, 5674)]\n",
       "Title: Special:UserLogin, Data: [('aa.d', 1, 4899), ('commons.m', 30, 181938), ('en', 44198, 718770014), ('en.q', 4, 34449), ('incubator.m', 1, 5221), ('m.f', 13, 58547), ('m.w', 3, 12523), ('m.wd', 2, 8696), ('meta.m', 1, 5311), ('simple', 2, 9960), ('ss', 1, 5052), ('www.w', 5, 49952), ('www.wd', 1, 4989)]\n",
       "Title: Acanthophorus_serraticornis, Data: [('ab', 1, 5942), ('ckb', 1, 5825), ('csb', 1, 5480), ('de', 1, 5510), ('dsb', 1, 5429), ('fj', 1, 4693)]\n",
       "Title: Allen_R._Schindler,_Jr, Data: [('ab', 1, 5957), ('ckb', 1, 5840), ('fj', 1, 4711), ('kab', 1, 4900), ('lij', 1, 4881), ('uk', 1, 7322)]\n",
-      "Title: Annales._Histoire,_Sciences_Sociales/en/Annales_d, Data: [('ab', 1, 6008), ('es', 1, 7775), ('fi', 1, 5678), ('sr', 1, 6100)]\n",
-      "Title: N.P.R, Data: [('ab', 1, 5900), ('csb', 1, 5438), ('hsb', 1, 5000), ('kab', 1, 4853), ('kj', 1, 4659), ('pl', 1, 6338), ('pt', 1, 7159)]\n",
-      "Title: Nord-Pas-de-Calais, Data: [('ab', 1, 5925), ('ckb', 1, 5806), ('csb', 1, 5460), ('de', 4, 120526), ('en', 2, 168302), ('eu', 1, 14875), ('fr', 8, 450792), ('pl', 1, 17938), ('ro', 1, 18515), ('ur', 1, 7716)]\n",
-      "Title: Agnes_Monica, Data: [('ace', 1, 13278), ('en', 1, 44900), ('sh', 1, 16203), ('tw', 1, 12184), ('zh', 1, 72848)]\n"
+      "Title: Annales._Histoire,_Sciences_Sociales/en/Annales_d, Data: [('ab', 1, 6008), ('es', 1, 7775), ('fi', 1, 5678), ('sr', 1, 6100)]\n"
      ]
     }
    ],
    "source": [
     "# Combine between data of pages with the same title and save each pair of pages data in order to display them\n",
-    "combined_titles = rdd.map(lambda x: (x[1], (x[0], x[2], x[3]))).groupByKey().filter(lambda x: len(x[1]) > 1).mapValues(list)\n",
+    "combined_titles = rdd.map(lambda x: (x[1], (x[0], x[2], x[3]))).groupByKey().mapValues(list)\n",
     "# combined_titles = rdd.map(lambda x: (x[1], (x[0], x[2], x[3]))).groupByKey().filter(lambda x: len(x[1]) > 1).mapValues(list)\n",
     "\n",
     "print(\"Combined titles:\")\n",
@@ -274,8 +274,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total time:  268.78053760528564\n",
-      "Total time in minutes:  4.47967562675476\n"
+      "Total time:  395.0417892932892\n",
+      "Total time in minutes:  6.58402982155482\n"
      ]
     }
    ],
