--- a/spark/wikipedia_map_reduce.ipynb
+++ b/spark/wikipedia_map_reduce.ipynb
@@ -46,8 +46,8 @@
     "        size = int(fields[3])\n",
     "        return (project, title, hits, size)\n",
     "    except Exception as e:\n",
-    "        print(\"Error parsing line:\", line)\n",
-    "        print(\"Exception:\", e)\n",
+    "        # print(\"Error parsing line:\", line)\n",
+    "        # print(\"Exception:\", e)\n",
     "        return None\n",
     "\n",
     "# Read the data from the file using parseLine function\n",
@@ -59,37 +59,21 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Min page size: 0, Max page size: 141180155987, Average page size: 132215.79814237214\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Compute min, max, and average page sizes\n",
     "minSize = rdd.map(lambda x: x[3]).min()\n",
     "maxSize = rdd.map(lambda x: x[3]).max()\n",
     "avgSize = rdd.map(lambda x: x[3]).mean()\n",
     "\n",
-    "print(\"Min page size: {}, Max page size: {}, Average page size: {}\".format(minSize, maxSize, avgSize))\n"
+    "# print(\"Min page size: {}, Max page size: {}, Average page size: {}\".format(minSize, maxSize, avgSize))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "English The titles count: 10292\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Count page titles that start with \"The\"\n",
     "# the_titles_count = rdd.filter(lambda x: x[1].startswith(\"The\")).count()\n",
@@ -98,7 +82,7 @@
     "english_the_titles_count = rdd.filter(lambda x: x[0] != \"en\" and x[1].startswith(\"The\")).count()\n",
     "# print(\"The titles count: {}, English The titles count: {}\".format(the_titles_count, english_the_titles_count))\n",
     "\n",
-    "print(\"English The titles count: {}\".format(english_the_titles_count))"
+    "# print(\"English The titles count: {}\".format(english_the_titles_count))"
    ]
   },
   {
@@ -111,8 +95,7 @@
      "output_type": "stream",
      "text": [
       "['271_ac', 'categoryuser_th', 'chiron_elias_krase', 'dassault_rafaele', 'edesv']\n",
-      "['271', 'ac', 'categoryuser', 'th', 'chiron']\n",
-      "Number of unique terms appearing in the page titles: 1688528\n"
+      "['271', 'ac', 'categoryuser', 'th', 'chiron']\n"
      ]
     }
    ],
@@ -135,7 +118,7 @@
     "# Count unique terms\n",
     "unique_terms_count = terms.distinct().count()\n",
     "\n",
-    "print(\"Number of unique terms appearing in the page titles:\", unique_terms_count)\n",
+    "# print(\"Number of unique terms appearing in the page titles:\", unique_terms_count)\n",
     "\n",
     "\n",
     "# re.sub(): This function is used for performing substitutions based on regular expressions. It takes three main arguments:\n",
@@ -160,63 +143,28 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Title: E.Desv, Count: 6\n",
-      "Title: Special:Contributions/5.232.61.79, Count: 1\n",
-      "Title: Special:ListFiles/Nyttend, Count: 1\n",
-      "Title: Special:WhatLinksHere/Main_Page, Count: 8\n",
-      "Title: Time_Inc, Count: 4\n",
-      "Title: Special:Contributions/MBisanz, Count: 1\n",
-      "Title: Special:UserLogin, Count: 13\n",
-      "Title: Acanthophorus_serraticornis, Count: 6\n",
-      "Title: Allen_R._Schindler,_Jr, Count: 6\n",
-      "Title: Annales._Histoire,_Sciences_Sociales/en/Annales_d, Count: 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Extract each title and the number of times it was repeated\n",
     "title_counts = rdd.map(lambda x: (x[1], 1)).reduceByKey(lambda x, y: x + y)\n",
     "\n",
-    "for title, count in title_counts.take(10):\n",
-    "    print(\"Title: {}, Count: {}\".format(title, count))"
+    "# for title, count in title_counts.take(10):\n",
+    "#     print(\"Title: {}, Count: {}\".format(title, count))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Combined titles:\n",
-      "Title: E.Desv, Data: [('aa', 1, 4662), ('arc', 1, 5210), ('ast', 1, 4825), ('fiu-vro', 1, 5237), ('fr', 1, 7057), ('ik', 1, 4548)]\n",
-      "Title: Special:Contributions/5.232.61.79, Data: [('aa', 1, 5805)]\n",
-      "Title: Special:ListFiles/Nyttend, Data: [('aa', 1, 5032)]\n",
-      "Title: Special:WhatLinksHere/Main_Page, Data: [('aa', 1, 5556), ('commons.m', 2, 15231), ('en', 5, 101406), ('en.s', 1, 8597), ('en.voy', 1, 8550), ('meta.m', 1, 11529), ('outreach.m', 1, 5698), ('simple', 3, 32145)]\n",
-      "Title: Time_Inc, Data: [('aa', 1, 4672), ('af', 1, 6182), ('ha', 1, 4842), ('na', 1, 4923)]\n",
-      "Title: Special:Contributions/MBisanz, Data: [('aa.d', 1, 5674)]\n",
-      "Title: Special:UserLogin, Data: [('aa.d', 1, 4899), ('commons.m', 30, 181938), ('en', 44198, 718770014), ('en.q', 4, 34449), ('incubator.m', 1, 5221), ('m.f', 13, 58547), ('m.w', 3, 12523), ('m.wd', 2, 8696), ('meta.m', 1, 5311), ('simple', 2, 9960), ('ss', 1, 5052), ('www.w', 5, 49952), ('www.wd', 1, 4989)]\n",
-      "Title: Acanthophorus_serraticornis, Data: [('ab', 1, 5942), ('ckb', 1, 5825), ('csb', 1, 5480), ('de', 1, 5510), ('dsb', 1, 5429), ('fj', 1, 4693)]\n",
-      "Title: Allen_R._Schindler,_Jr, Data: [('ab', 1, 5957), ('ckb', 1, 5840), ('fj', 1, 4711), ('kab', 1, 4900), ('lij', 1, 4881), ('uk', 1, 7322)]\n",
-      "Title: Annales._Histoire,_Sciences_Sociales/en/Annales_d, Data: [('ab', 1, 6008), ('es', 1, 7775), ('fi', 1, 5678), ('sr', 1, 6100)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Combine between data of pages with the same title and save each pair of pages data in order to display them\n",
-    "combined_titles = rdd.map(lambda x: (x[1], (x[0], x[2], x[3]))).groupByKey().mapValues(list)\n",
-    "# combined_titles = rdd.map(lambda x: (x[1], (x[0], x[2], x[3]))).groupByKey().filter(lambda x: len(x[1]) > 1).mapValues(list)\n",
+    "# combined_titles = rdd.map(lambda x: (x[1], (x[0], x[2], x[3]))).groupByKey().mapValues(list)\n",
+    "combined_titles = rdd.map(lambda x: (x[1], (x[0], x[2], x[3]))).groupByKey().filter(lambda x: len(x[1]) > 1).mapValues(list)\n",
     "\n",
-    "print(\"Combined titles:\")\n",
-    "for title, data in combined_titles.take(10):\n",
-    "    print(\"Title: {}, Data: {}\".format(title, data))\n",
+    "# print(\"Combined titles:\")\n",
+    "# for title, data in combined_titles.take(10):\n",
+    "#     print(\"Title: {}, Data: {}\".format(title, data))\n",
     "\n",
     "# mapValues(list) to convert the iterator of values into a list. This will give you each title paired with a list of its corresponding data tuples."
    ]
@@ -248,9 +196,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-9b07baca1d7b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Stop the existing SparkContext\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'sc' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Stop the existing SparkContext\n",
     "sc.stop()  \n"
@@ -274,8 +234,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total time:  395.0417892932892\n",
-      "Total time in minutes:  6.58402982155482\n"
+      "Total time:  232.958838224411\n",
+      "Total time in minutes:  3.8826473037401836\n"
      ]
     }
    ],
