--- a/spark/wikipedia_map_reduce.ipynb
+++ b/spark/wikipedia_map_reduce.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,19 +154,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: E.Desv, Page1: ('aa', 'E.Desv', 1, 4662), Page2: ('arc', 'E.Desv', 1, 5210)\n",
+      "Title: E.Desv, Page1: ('aa', 'E.Desv', 1, 4662), Page2: ('ast', 'E.Desv', 1, 4825)\n",
+      "Title: E.Desv, Page1: ('aa', 'E.Desv', 1, 4662), Page2: ('fiu-vro', 'E.Desv', 1, 5237)\n",
+      "Title: E.Desv, Page1: ('aa', 'E.Desv', 1, 4662), Page2: ('fr', 'E.Desv', 1, 7057)\n",
+      "Title: E.Desv, Page1: ('aa', 'E.Desv', 1, 4662), Page2: ('ik', 'E.Desv', 1, 4548)\n",
+      "Title: E.Desv, Page1: ('arc', 'E.Desv', 1, 5210), Page2: ('ast', 'E.Desv', 1, 4825)\n",
+      "Title: E.Desv, Page1: ('arc', 'E.Desv', 1, 5210), Page2: ('fiu-vro', 'E.Desv', 1, 5237)\n",
+      "Title: E.Desv, Page1: ('arc', 'E.Desv', 1, 5210), Page2: ('fr', 'E.Desv', 1, 7057)\n",
+      "Title: E.Desv, Page1: ('arc', 'E.Desv', 1, 5210), Page2: ('ik', 'E.Desv', 1, 4548)\n",
+      "Title: E.Desv, Page1: ('ast', 'E.Desv', 1, 4825), Page2: ('fiu-vro', 'E.Desv', 1, 5237)\n",
+      "Title: E.Desv, Page1: ('ast', 'E.Desv', 1, 4825), Page2: ('fr', 'E.Desv', 1, 7057)\n",
+      "Title: E.Desv, Page1: ('ast', 'E.Desv', 1, 4825), Page2: ('ik', 'E.Desv', 1, 4548)\n",
+      "Title: E.Desv, Page1: ('fiu-vro', 'E.Desv', 1, 5237), Page2: ('fr', 'E.Desv', 1, 7057)\n",
+      "Title: E.Desv, Page1: ('fiu-vro', 'E.Desv', 1, 5237), Page2: ('ik', 'E.Desv', 1, 4548)\n",
+      "Title: E.Desv, Page1: ('fr', 'E.Desv', 1, 7057), Page2: ('ik', 'E.Desv', 1, 4548)\n",
+      "Title: Special:WhatLinksHere/Main_Page, Page1: ('aa', 'Special:WhatLinksHere/Main_Page', 1, 5556), Page2: ('commons.m', 'Special:WhatLinksHere/Main_Page', 2, 15231)\n",
+      "Title: Special:WhatLinksHere/Main_Page, Page1: ('aa', 'Special:WhatLinksHere/Main_Page', 1, 5556), Page2: ('en', 'Special:WhatLinksHere/Main_Page', 5, 101406)\n",
+      "Title: Special:WhatLinksHere/Main_Page, Page1: ('aa', 'Special:WhatLinksHere/Main_Page', 1, 5556), Page2: ('en.s', 'Special:WhatLinksHere/Main_Page', 1, 8597)\n",
+      "Title: Special:WhatLinksHere/Main_Page, Page1: ('aa', 'Special:WhatLinksHere/Main_Page', 1, 5556), Page2: ('en.voy', 'Special:WhatLinksHere/Main_Page', 1, 8550)\n",
+      "Title: Special:WhatLinksHere/Main_Page, Page1: ('aa', 'Special:WhatLinksHere/Main_Page', 1, 5556), Page2: ('meta.m', 'Special:WhatLinksHere/Main_Page', 1, 11529)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Combine between data of pages with the same title and save each pair of pages data in order to display them\n",
-    "# combined_titles = rdd.map(lambda x: (x[1], (x[0], x[2], x[3]))).groupByKey().mapValues(list)\n",
-    "combined_titles = rdd.map(lambda x: (x[1], (x[0], x[2], x[3]))).groupByKey().filter(lambda x: len(x[1]) > 1).mapValues(list)\n",
+    "# # Combine between data of pages with the same title and save each pair of pages data in order to display them\n",
+    "# # combined_titles = rdd.map(lambda x: (x[1], (x[0], x[2], x[3]))).groupByKey().mapValues(list)\n",
+    "# combined_titles = rdd.map(lambda x: (x[1], (x[0], x[2], x[3]))).groupByKey().filter(lambda x: len(x[1]) > 1).mapValues(list)\n",
     "\n",
-    "# print(\"Combined titles:\")\n",
-    "# for title, data in combined_titles.take(10):\n",
-    "#     print(\"Title: {}, Data: {}\".format(title, data))\n",
+    "# # print(\"Combined titles:\")\n",
+    "# # for title, data in combined_titles.take(10):\n",
+    "# #     print(\"Title: {}, Data: {}\".format(title, data))\n",
     "\n",
-    "# mapValues(list) to convert the iterator of values into a list. This will give you each title paired with a list of its corresponding data tuples."
+    "# # mapValues(list) to convert the iterator of values into a list. This will give you each title paired with a list of its corresponding data tuples.\n",
+    "\n",
+    "\n",
+    "from itertools import combinations\n",
+    "\n",
+    "# Group pages by their title\n",
+    "grouped_pages = rdd.groupBy(lambda x: x[1])\n",
+    "\n",
+    "# Function to generate pairwise combinations within each group\n",
+    "def generate_pairs(group):\n",
+    "    title = group[0]\n",
+    "    pages = group[1]\n",
+    "    page_combinations = combinations(pages, 2)  # Generate all pairwise combinations\n",
+    "    return [(title, pair[0], pair[1]) for pair in page_combinations]\n",
+    "\n",
+    "# Generate pairwise combinations for each group and flatten the result\n",
+    "pairs_rdd = grouped_pages.flatMap(lambda group: generate_pairs(group))\n",
+    "\n",
+    "# Print each pair of pages data\n",
+    "for title, page1, page2 in pairs_rdd.take(20):\n",
+    "    print(\"Title: {}, Page1: {}, Page2: {}\".format(title, page1, page2))\n",
+    "# E.Desv:\n",
+    "# ('aa', 1, 4662)\n",
+    "# ('arc', 1, 5210)\n",
+    "# ('ast', 1, 4825)\n",
+    "# ('fiu-vro', 1, 5237)\n",
+    "# ('fr', 1, 7057)\n",
+    "# ('ik', 1, 4548)\n"
    ]
   },
   {
@@ -175,6 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# create a document includes all the results of each query\n",
     "with open(\"map_reduce_results.txt\", \"w\", encoding=\"utf-8\") as f:\n",
     "    f.write(\"Min page size: {}\\n\".format(minSize))\n",
